--- a/src/app.html
+++ b/src/app.html
@@ -26,7 +26,7 @@
 		<link rel="icon" type="image/png" href="/favicon.png" />
 		
 		<!-- Security Headers -->
-		<meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' https:; img-src 'self' data: https: blob:;">
+		<meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' https:; img-src 'self' data: https: blob:; worker-src 'self' blob:; child-src 'self' blob:;">
 		
 		%sveltekit.head%
 	</head>
