--- a/Module_Manager/src/app.html
+++ b/Module_Manager/src/app.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" type="image/svg+xml" />
-		<title>LTE WISP Management Platform</title>
+		<title>WispTools.io - WISP Management Platform</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
